--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,11 @@
           <% if user_signed_in? %><li class="text-white"><a href="/welcome">welcome</a></li><% end %>
           <li class="text-white hover:text-gray-400"><a href="/about">about</a></li>
           <% if user_signed_in? %><li class="nav-item text-white"><%= link_to 'edit profile', edit_user_registration_path %></li>
-          <% if user_signed_in? && current_user.isadmin? %><li><%= link_to 'admin', rails_admin_path %></li><% end %>
+          <% if user_signed_in? && current_user.isadmin? %><li class="nav-item text-white"><%= link_to 'admin', rails_admin_path %></li><% end %>
           <%# link_to 'sign out', destroy_user_session_path, method: 'delete', status: 303 %>
-          <li class="nav-item text-white hover:text-gray-400"><%= link_to "sign out", destroy_user_session_path, data: { "turbo-method": :delete } %></li><% else %>
+          <li class="nav-item text-white hover:text-gray-400">
+            <%= button_to "sign out", destroy_user_session_path, method: :delete, data: { turbo: false } %>
+            <%# link_to "sign out", destroy_user_session_path, data: { "turbo-method": :delete } %></li><% else %>
           <li class="nav-item text-white hover:text-gray-400"><%= link_to 'sign up', new_user_registration_path %></li>
           <li class="nav-item text-white hover:text-gray-400"><%= link_to 'sign in', new_user_session_path %></li><% end %>
         </ul>
