--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: post, class: "contents") do |form| %>
   <% if post.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2 class="pt-6 pb-1 text-3xl font-semibold><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
+      <p class="pt-6 pb-1 text-3xl font-semibold><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved</p>
 
       <ul>
         <% post.errors.each do |error| %>
